refs #63409: Updated eb-public.css to resolve the woocommerce checkout page alignment issue.

--- a/edwiser-bridge/public/assets/css/eb-public.css
+++ b/edwiser-bridge/public/assets/css/eb-public.css
@@ -462,9 +462,13 @@ div#user_login label{
     /*width: 125px;*/
     letter-spacing: 0.1em;
 }
-.form-row{
+
+
+/*.form-row{
     margin: 0.5em;
-}
+}*/
+
+
 /* user profile shortcode style */
 .eb-user-account-navigation{
     float: left;
